<resources>
    <string name="app_name">易搭</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_search">搜索</string>
    <string name="action_screen">筛选</string>
    <string name="action_messages">消息</string>
    <string name="action_settings">设置</string>
    <string name="action_post">发布</string>
    <string name="action_star">收藏</string>
    <string name="action_like">喜欢</string>

    <string name="card_poster_name">a</string>
    <string name="navigation_header_name">zd</string>
    <string name="navigation_post">发布搭配</string>
    <string name="navigation_mycollect">我的搭</string>
    <string name="navigation_mastercollect">高手搭</string>
    <string name="navigation_brandcollect">品牌搭</string>
    <string name="navigation_friendcollect">好友搭</string>
    <string name="navigation_logout">登出</string>

    <string name="login_user_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_singup">注册</string>

    <string name="post_next">下一步</string>

    <string name="ip">1</string>
</resources>
