<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_post"
            android:icon="@drawable/navigation_post"
            android:title="@string/navigation_post" />
        <item
            android:id="@+id/navigation_mycollect"
            android:icon="@drawable/navigation_mycollect"
            android:title="@string/navigation_mycollect" />

        <item
            android:id="@+id/navigation_mastercollect"
            android:icon="@drawable/navigation_mastercollect"
            android:title="@string/navigation_mastercollect" />

        <item
            android:id="@+id/navigation_brandcollect"
            android:icon="@drawable/navigation_brandcollect"
            android:title="@string/navigation_brandcollect" />

        <item
            android:id="@+id/navigation_friendcollect"
            android:icon="@drawable/navigation_friendscollect"
            android:title="@string/navigation_friendcollect" />
        <item >
            <menu>
                <item
                    android:id="@+id/navigation_logout"

                    android:title="@string/navigation_logout" />

            </menu>
        </item>
    </group>
</menu>